# C-Minus-Compiler

./: .gitignore  CMakeLists.txt  README.md
doc/: asm_code_specification.md
src/: AST.h  CMakeLists.txt  Compiler.cpp  Compiler.h  Runtime.cpp  Runtime.h  cm.cpp  cmc.cpp
src/ast_vis/: AstDumper.cpp  AstDumper.h
src/backend/: AssemblyFileIO.cpp  AssemblyFileIO.h  CodeGenerator.cpp  CodeGenerator.h  Instruction.h  InstructionType.h  NativeFunc.h  VM.cpp  VM.h  VMInst.h
src/frontend/: Lexer.cpp  Lexer.h  LexingState.h  Parser.cpp  Parser.h  SemanticAnalyzer.cpp  SemanticAnalyzer.h  Token.h  TokenType.h  VariableAttribute.h
tests/: a_plus_b.c  a_plus_b.s  dead.c  dead.s  dead_analysis.s  factorial.c  factorial.s  factorial_analysis.s  gcd.c  gcd.s  generate_test.py  out.s  quick_sort.c  quick_sort.s  sample.json  selection_sort.c  selection_sort.s  testdata.in
